respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Disbursement__c.object
<CustomObject>
    <description>Object specifying all payment history and details along with each Import-Export on each Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Supplier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Shipment_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Accounting_Rollup_Type__c</fullName>
        <formula>IF ( BEGINS(Disbursment_Concept__c, &apos;FREIGHT&apos;)
|| BEGINS(Disbursment_Concept__c, &apos;COMM&apos;)
|| BEGINS(Disbursment_Concept__c, &apos;DEMM&apos;)
|| BEGINS(Disbursment_Concept__c, &apos;DISP&apos;)
,&apos;ACCT-FREIGHT-EXPENSE&apos;, 
IF ( BEGINS(Disbursment_Concept__c, &apos;CUST&apos;)
|| BEGINS(Disbursment_Concept__c, &apos;SURV&apos;)
|| BEGINS(Disbursment_Concept__c, &apos;CLEAN&apos;)
, &apos;ACCT-OTHER-EXPENSE&apos;,&apos;ACCT-REVENUE&apos;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Rollup Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated_on_IE_Cargo_Lines__c</fullName>
        <label>Amount Allocated on IE Cargo Lines</label>
        <summarizedField>Import_Export_Cargo_Line_Disbursement__c.Amount__c</summarizedField>
        <summaryForeignKey>Import_Export_Cargo_Line_Disbursement__c.Disbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated_on_IE_Service_Lines__c</fullName>
        <label>Amount Allocated on IE Service Lines</label>
        <summarizedField>Import_Export_Service_Line_Disbursement__c.Amount__c</summarizedField>
        <summaryForeignKey>Import_Export_Service_Line_Disbursement__c.Disbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated_on_Ship_Cargo_Lines__c</fullName>
        <label>Amount Allocated on Ship. Cargo Lines</label>
        <summarizedField>Shipment_Item_Line_Disbursement__c.Amount__c</summarizedField>
        <summaryForeignKey>Shipment_Item_Line_Disbursement__c.Shipment_Disbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated_on_Ship_Service_Line__c</fullName>
        <label>Amount Allocated on Ship. Service Line</label>
        <summarizedField>Shipment_Service_Line_Disbursement__c.Amount__c</summarizedField>
        <summaryForeignKey>Shipment_Service_Line_Disbursement__c.Shipment_Disbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <label>[Old] Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit note</fullName>
                </value>
                <value>
                    <fullName>SARS Payment EDI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buy_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cfdi_Number__c</fullName>
        <label>Cfdi Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Containers__c</fullName>
        <formula>IF(Shipment__c != null, 

IF(AND(text(Shipment__r.N_Containers__c) != null, Shipment__r.Container_Type__c != null, text(Shipment__r.N_Containers__c) != &apos;0&apos;) , text(Shipment__r.N_Containers__c) &amp; &apos; x &apos; &amp; Shipment__r.Container_Type__r.Name, IF(AND(text(Shipment__r.N_Containers__c) != null, text(Shipment__r.N_Containers__c) !=&apos;0&apos;) , text(Shipment__r.N_Containers__c), IF(Shipment__r.Container_Type__c != null , Shipment__r.Container_Type__r.Name, &apos;&apos;)))
,


IF(Import_Export_Quote_Order__c != null,
IF(AND(text(Import_Export_Quote_Order__r.Container_Count__c) != null, Import_Export_Quote_Order__r.Container_Type__c != null, text(Import_Export_Quote_Order__r.Container_Count__c) != &apos;0&apos;) , text(Import_Export_Quote_Order__r.Container_Count__c) &amp; &apos; x &apos; &amp; Import_Export_Quote_Order__r.Container_Type__r.Name, IF(AND(text(Import_Export_Quote_Order__r.Container_Count__c) != null, text(Import_Export_Quote_Order__r.Container_Count__c) !=&apos;0&apos;) , text(Import_Export_Quote_Order__r.Container_Count__c), IF(Import_Export_Quote_Order__r.Container_Type__c != null , Import_Export_Quote_Order__r.Container_Type__r.Name, &apos;&apos;)))
,&apos;&apos;
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Containers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Imp_Exp_Currency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Imp-Exp Currency</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Invoice_SAP__c</fullName>
        <label>Date Disbursement SAP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Receive_from_SAP__c</fullName>
        <label>Date Receive from SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Refund_Received__c</fullName>
        <label>Date Refund Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disbursement_Status__c</fullName>
        <label>Disbursement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Send to Sap</fullName>
                </value>
                <value>
                    <fullName>Received from Sap</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Facturado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursment_Concept__c</fullName>
        <inlineHelpText>Write Concept in block capitals</inlineHelpText>
        <label>Concept</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Account_Owner__c</fullName>
        <label>Email Account Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Etapa__c</fullName>
        <label>Payment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abierto</fullName>
                </value>
                <value>
                    <fullName>Enviado</fullName>
                </value>
                <value>
                    <fullName>En Proceso</fullName>
                </value>
                <value>
                    <fullName>Parcialidad</fullName>
                </value>
                <value>
                    <fullName>Pagado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evidence_Reception_Date__c</fullName>
        <label>Evidence Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evidence_Reception_Document_Status__c</fullName>
        <label>Evidence Reception Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factura_del_Proveedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Factura del Proveedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight_Mode_SP__c</fullName>
        <description>Makes reference to freight mode specified in shipment</description>
        <formula>TEXT(Shipments_Program__r.Freight_Mode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Mode Shipments Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight_Mode__c</fullName>
        <formula>IF(Import_Export_Quote_Order__c != null ,TEXT(Import_Export_Quote_Order__r.Freight_Mode__c), IF( Shipment__c != null,TEXT(Shipment__r.Freight_Mode__c),&apos;&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEN_Number__c</fullName>
        <label>Numero (Gen)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Export_Order_Number__c</fullName>
        <formula>Import_Export_Quote_Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import-Export Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Export_Quote_Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Import-Export Quote/Order</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importe_Total__c</fullName>
        <label>Importe Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Exc__c</fullName>
        <label>[Old] Invoice Amount (Exc)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Inc__c</fullName>
        <formula>Invoice_Amount_Exc__c + VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[Old] Invoice Amount (Inc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Ref__c</fullName>
        <label>Supplier Invoice Ref</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_Allocation__c</fullName>
        <label>Master Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customs</fullName>
                </value>
                <value>
                    <fullName>Port</fullName>
                </value>
                <value>
                    <fullName>Shipping Line</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>PRCC</fullName>
                </value>
                <value>
                    <fullName>Depot</fullName>
                </value>
                <value>
                    <fullName>Forwarding Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Release Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>Conversion to text of: if &quot;Import-Export Quote/Order&quot; not blank then &quot;Freight Mode&quot; and &quot;Service Mode&quot; from &quot;Import-Export Quote/Order&quot;, else; if &quot;Shipment&quot; not blank then &quot;Freight Mode&quot; and &quot;Service Mode&quot;  from &quot;Shipment&quot;, else blank</description>
        <formula>IF(Import_Export_Quote_Order__c != null ,TEXT(Import_Export_Quote_Order__r.Freight_Mode__c) &amp; &quot; &quot; &amp; TEXT(Import_Export_Quote_Order__r.Service_Mode__c), IF( Shipment__c != null,
TEXT(Shipment__r.Freight_Mode__c) &amp; &quot; &quot; &amp; TEXT(Shipment__r.Service_Mode__c)
,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freight Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_Cancelacion__c</fullName>
        <label>Motivo Cancelacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error en Captura</fullName>
                </value>
                <value>
                    <fullName>Negociacion con Cliente</fullName>
                </value>
                <value>
                    <fullName>Falta Disponibilidad</fullName>
                </value>
                <value>
                    <fullName>Cambio de proveedor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nature_Merchandise__c</fullName>
        <description>Conversion to text of: if &quot;Import-Export Quote/Order&quot; not blank then &quot;Nature Merchandise&quot; from &quot;Import-Export Quote/Order&quot;, else &quot;Nature Merchandise&quot; from &quot;Shipment</description>
        <formula>IF(Import_Export_Quote_Order__c != null,Import_Export_Quote_Order__r.Nature_Merchandise__c,  Shipment__r.Nature_Merchandise__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nature Merchandise</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Credito__c</fullName>
        <label>Numero Credito</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Factura__c</fullName>
        <label>Numero Factura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Folio__c</fullName>
        <label>Numero Folio</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OV_SAP_DISBURMET__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OV SAP DISBURMET</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Disbursements (OV SAP DISBURMET)</relationshipLabel>
        <relationshipName>Disbursements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrdenCompra__c</fullName>
        <label>Orden de Compra</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <description>Conversion to currency of difference between &quot;Total (Excl VAT)&quot; and, sum of &quot;Amount Allocated on IE Cargo Lines&quot;, &quot;Amount Allocated on IE Service Lines&quot;, &quot;Amount Allocated on Ship Cargo Lines&quot; and &quot;Amount Allocated on Ship Service Line&quot;</description>
        <formula>Total_Excl_VAT__c - (Amount_Allocated_on_IE_Cargo_Lines__c + Amount_Allocated_on_IE_Service_Lines__c + Amount_Allocated_on_Ship_Cargo_Lines__c + Amount_Allocated_on_Ship_Service_Line__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Disbursement Lines&apos; balance</inlineHelpText>
        <label>Allocation Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_As__c</fullName>
        <label>Payment As</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Amount</fullName>
                </value>
                <value>
                    <fullName>Partial Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Required__c</fullName>
        <label>Payment Method Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Ref__c</fullName>
        <label>Payment Ref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Landside Charges</fullName>
                </value>
                <value>
                    <fullName>Examination</fullName>
                </value>
                <value>
                    <fullName>Detention</fullName>
                </value>
                <value>
                    <fullName>Demurrage</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Local Agents Charges</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pedido_Compra_SAP__c</fullName>
        <label>Orden de Compra SAP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_ETA__c</fullName>
        <description>Formula describing place of arrival</description>
        <formula>IF(Import_Export_Quote_Order__c != null ,TEXT(Import_Export_Quote_Order__r.Planned_ETA_SP__c) &amp; &quot; &quot; &amp; Import_Export_Quote_Order__r.Site_of_Discharge__r.Name &amp; &quot; &quot; &amp; Import_Export_Quote_Order__r.Country_ofDischarge__r.Name, 
IF(Shipment__c != null,
TEXT(Shipment__r.ETA_Point_of_Discharge__c) &amp; &quot; &quot; &amp; Shipment__r.Site_of_Discharge__r.Name &amp; &quot; &quot; &amp; Shipment__r.Country_of_Discharge__r.Name,&apos;&apos;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_ETA_filter__c</fullName>
        <label>Planned ETA (filter)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_ETA_filter_formula__c</fullName>
        <description>Number describing time and date of estimated arrival</description>
        <formula>IF(Import_Export_Quote_Order__c != null, Import_Export_Quote_Order__r.Planned_ETA_SP__c, Shipment__r.ETA_Point_of_Discharge__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETA (filter formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_ETD__c</fullName>
        <description>text describing estimated location of departure</description>
        <formula>IF(Import_Export_Quote_Order__c != null,TEXT( Import_Export_Quote_Order__r.Last_Shipment__r.ETD_from_Point_of_Load__c ) &amp; &quot; &quot; &amp;  Import_Export_Quote_Order__r.Site_of_Load__r.Name &amp; &quot; &quot; &amp;  Import_Export_Quote_Order__r.Country_ofLoad__r.Name,
TEXT(Shipment__r.ETD_from_Point_of_Load__c) &amp; &quot; &quot; &amp;   Shipment__r.Site_of_Load__r.Name &amp; &quot; &quot; &amp;   Shipment__r.Country_of_Load__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_ETD_filter__c</fullName>
        <label>Planned ETD (filter)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_ETD_filter_formula__c</fullName>
        <description>number describing time and date of estimated arrival</description>
        <formula>If(Import_Export_Quote_Order__c != null ,Import_Export_Quote_Order__r.Last_Shipment__r.ETD_from_Point_of_Load__c, Shipment__r.ETD_from_Point_of_Load__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned ETD (filter formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quotation_Status__c</fullName>
        <formula>text(Import_Export_Quote_Order__r.Quotation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Comment__c</fullName>
        <label>Request Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Note__c</fullName>
        <label>Request Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay in full</fullName>
                </value>
                <value>
                    <fullName>Part pay</fullName>
                </value>
                <value>
                    <fullName>Deposit - await refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requiere_Acuse__c</fullName>
        <formula>TEXT(Account__r.Requiere_Acuse_Sap__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requiere Acuse?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SARS_LRN_Number__c</fullName>
        <label>SARS LRN Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SARS_Office__c</fullName>
        <label>SARS Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DURBAN</fullName>
                </value>
                <value>
                    <fullName>DURBAN INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>JOHANNESBURG INTL (AIR)</fullName>
                </value>
                <value>
                    <fullName>JOHANNESBURG (SEA)</fullName>
                </value>
                <value>
                    <fullName>CAPE TOWN (SEA)</fullName>
                </value>
                <value>
                    <fullName>CAPE TOWN (AIR)</fullName>
                </value>
                <value>
                    <fullName>PORT ELIZABETH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SARS_Ref__c</fullName>
        <label>SARS Ref</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisional Payment</fullName>
                </value>
                <value>
                    <fullName>Customs Duty</fullName>
                </value>
                <value>
                    <fullName>Customs VAT</fullName>
                </value>
                <value>
                    <fullName>Penalty</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Mode__c</fullName>
        <formula>IF(Import_Export_Quote_Order__c != null,TEXT(Import_Export_Quote_Order__r.Service_Mode__c), TEXT(Shipment__r.Service_Mode__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Mode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Number__c</fullName>
        <formula>Shipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <description>Describes &quot;Shipment Status&quot; as stated in &quot;Shipment&quot;</description>
        <formula>text(Shipment__r.Shipment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipments_Program_Number__c</fullName>
        <formula>Shipments_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipments Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipments_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipLabel>Disbursements</relationshipLabel>
        <relationshipName>Shipment_Disbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Line_Inv_Amount__c</fullName>
        <label>Shipping Line Inv Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Allocation__c</fullName>
        <label>Sub Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Master_Allocation__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customs Duty</fullName>
                </value>
                <value>
                    <fullName>Customs VAT</fullName>
                </value>
                <value>
                    <fullName>Provisional Payment</fullName>
                </value>
                <value>
                    <fullName>Customs Other</fullName>
                </value>
                <value>
                    <fullName>Cargo Dues</fullName>
                </value>
                <value>
                    <fullName>Terminal Handling Charge</fullName>
                </value>
                <value>
                    <fullName>Landing charge</fullName>
                </value>
                <value>
                    <fullName>Shipping Order</fullName>
                </value>
                <value>
                    <fullName>Port Storage</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>Landside Charge</fullName>
                </value>
                <value>
                    <fullName>Cartage</fullName>
                </value>
                <value>
                    <fullName>Unpack</fullName>
                </value>
                <value>
                    <fullName>Repack</fullName>
                </value>
                <value>
                    <fullName>Depot Storage</fullName>
                </value>
                <value>
                    <fullName>Ex Works Charge</fullName>
                </value>
                <value>
                    <fullName>Freight Import</fullName>
                </value>
                <value>
                    <fullName>Delivery Charge</fullName>
                </value>
                <value>
                    <fullName>Profit Share</fullName>
                </value>
                <value>
                    <fullName>Rebate Certicate</fullName>
                </value>
                <value>
                    <fullName>Customs Exam</fullName>
                </value>
                <value>
                    <fullName>Special Attendance</fullName>
                </value>
                <value>
                    <fullName>Cargo Repairs</fullName>
                </value>
                <value>
                    <fullName>Port Exam</fullName>
                </value>
                <value>
                    <fullName>Airline Handling</fullName>
                </value>
                <value>
                    <fullName>Airline Storage</fullName>
                </value>
                <value>
                    <fullName>Airline Freight</fullName>
                </value>
                <value>
                    <fullName>Airline Split Fees</fullName>
                </value>
                <value>
                    <fullName>Airline Security Fee</fullName>
                </value>
                <value>
                    <fullName>Airline Hazardous Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier_Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Status__c</fullName>
        <label>Supplier Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timbrado_Factura_SAP__c</fullName>
        <label>Timbrado Factura SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT_Imp_Exp_Currency_N__c</fullName>
        <formula>Total_Excl_VAT__c* Conversion_Rate_to_Imp_Exp_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Excl. VAT) (Imp-Exp Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT_Invoice_Lines__c</fullName>
        <label>Total (Excl. VAT) Disbursement Lines</label>
        <summarizedField>Disbursement_Line__c.Amount__c</summarizedField>
        <summaryForeignKey>Disbursement_Line__c.Disbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Excl_VAT__c</fullName>
        <formula>Total_Excl_VAT_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total (Excl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Incl_VAT__c</fullName>
        <description>Conversion to currency of &quot;Total (Excl VAT)&quot; + &quot;Total VAT&quot;</description>
        <formula>Total_Excl_VAT__c + Total_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Total (Excl VAT)&quot; + &quot;Total VAT&quot;</inlineHelpText>
        <label>Total (Incl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_SAP__c</fullName>
        <label>Total Disbursement SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_VAT_Invoice_Lines__c</fullName>
        <label>Total VAT Disbursement  Lines</label>
        <summarizedField>Disbursement_Line__c.Total_VAT__c</summarizedField>
        <summaryForeignKey>Disbursement_Line__c.Disbursement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>